<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_start_green_dao"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_green_dao"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp"/>

        <Button
            android:id="@+id/btn_start_lite_orm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_lite_orm"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_start_lite_orm_other"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_lite_orm_other"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp"/>

        <Button
            android:id="@+id/btn_start_green_dao_other"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_green_dao_other"
            tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="8dp"/>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_event_bus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_event_bus"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_simple_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_simple_recycler_view"/>
        <Button
            android:id="@+id/btn_person_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_person_recycler_view"/>
        <Button
            android:id="@+id/btn_complex_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_complex_recycler_view"/>
        <Button
            android:id="@+id/btn_auto_value_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_auto_value_recycler_view"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"/>

</LinearLayout>
